# biomed-agent

./: .env  .env.example  .gitignore  AGENTS.md  README.md  install.sh  mcp.json  pyproject.toml
biomed_agent/: __init__.py  cli.py  mcp_client.py  servers.py
core/: __init__.py  agent.py  mcp_client.py
skills/biomed-research/: SKILL.md
tests/: test_agent_helpers.py  test_cli_surface.py  test_contract_docs.py  test_server_registry.py
ui/: app.py  cli.py
