[project]
name = "biomed-agent"
version = "0.2.0"
description = "Connecting AI to biomedical data"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["biomed_agent"]

[project.scripts]
biomed-agent = "biomed_agent.cli:app"
